styles/components/navbar.scss
.discord-profile-button {
	border: none;
	background-color: transparent;

	font-weight: 400;
	font-size: 25px;
	line-height: 38px;

	display: flex;
	align-items: center;

	cursor: pointer;
	transition: filter 0.5s ease;

	p {
		height: 20px;
		width: 20px;
		border-radius: 50%;

		margin-left: 10px;

		&.offline {
			background-color: $grey;
		}

		&.online {
			background-color: #3ba55d;
		}
	}

	&:hover,
	&:focus-visible {
		outline: none;
		filter: drop-shadow(0px 0px 10px #ffffff);
	}
}

.navbar-container-wrapper {
	width: 100%;
	height: fit-content;
	position: fixed;
	z-index: 9999;
	top: 25px;
	left: 50%;
	transform: translateX(-50%);
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.navbar-container {
	background: #1e1f21;
	border-radius: 10px;
	width: 90%;
	height: 80px;
	padding: 20px;

	display: flex;
	align-items: center;
	justify-content: space-between;
}

.navbar-logo {
	height: 30px;
	cursor: pointer;
}

.navbar-links {
	display: flex;
	justify-content: center;
	align-items: center;

	a {
		font-size: 25px;

		&:not(:first-child) {
			margin-left: 10px;
		}
	}
}

.discord-component-container {
	position: relative;
}

.discord-component {
	position: absolute;
	z-index: 9999;

	right: 0%;
	transform: translateY(10px);
	filter: drop-shadow(5px 10px 10px rgba(0, 0, 0, 0.25));
}

/* === MOBILE === */
.navbar-container-wrapper.mobile {
	top: 0px;
	display: none;

	> .navbar-container {
		width: 100%;
		border-radius: 0px;
		border-bottom: 1px solid $border1;
	}
}

.navbar-menu-button {
	border: none;
	background: none;

	cursor: pointer;

	&.enabled > div.navbar-menu-button-bar {
		&:nth-of-type(1) {
			transform: translateY(10px) rotate(45deg);
		}
		&:nth-of-type(2) {
			opacity: 0;
		}
		&:nth-of-type(3) {
			transform: translateY(-10px) rotate(-45deg);
		}
	}
}

.navbar-menu-button-bar {
	height: 4px;
	width: 35px;
	display: block;
	margin: 6px auto;
	border-radius: 5px;
	position: relative;
	background-color: $white;

	transition: all 0.5s ease;
}

.fake-navbar {
	height: 105px;
}

.navbar-mobile {
	width: 100%;

	display: none;
	flex-direction: column;

	overflow: hidden;

	background-color: $nav-background;
}

.navbar-buttons-mobile {
	width: 100%;
	padding-left: 20px;
	padding-bottom: 20px;

	display: flex;
	flex-direction: column;
	justify-content: center;

	> a {
		margin-left: 0px !important;
		margin-top: 10px;

		font-size: 25px;
	}

	&.user {
		border-bottom: none;
		padding-bottom: 0;
	}
}

.navbar-discord {
	padding-left: 20px;
	width: 100%;

	.discord-container {
		transform: scale(0.8) translateX(-4.5rem);
		max-width: 500px;
	}
}

@media screen and (max-width: 800px) {
	.navbar-container-wrapper {
		display: none;

		&.mobile {
			display: block;
		}
	}

	.fake-navbar {
		height: 80px;
	}
}

@media screen and (max-width: 500px) {
	.navbar-discord .discord-container {
		transform: scale(0.55) translateX(-12em) translateY(-7rem);
	}
}

